--- a/index.html
+++ b/index.html
@@ -16,23 +16,24 @@
 </head>
 <body>
       <main>
-        <div class="info">
+        <section class="info">
           <img src="assets/images/avatar-jessica.jpeg" alt="Girl in afro">
           <h2>Jessica Randall</h2>
-          <h4>London, United Kingdom</h4>
-          "Front-end developer and avid reader."
-        </div>
-        <div class="links">
-          GitHub
-          Frontend Mentor
-          LinkedIn
-          Twitter
-          Instagram
-        </div>
+          <h5>London, United Kingdom</h5>
+          <p>"Front-end developer and avid reader."</p>
+        </section>
+        <section class="links">
+          <button>GitHub</button>
+          <button>Frontend Mentor</button>
+          <button>LinkedIn</button>
+          <button>Twitter</button>
+          <button>Instagram</button>
+        </section>
       </main>
     <footer class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
+    <a target="_blank" href="https://icons8.com/icon/59799/hand-cursor">Pointer</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
     </footer>
   </body>
 </html>
