--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </main>
     <footer class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://github.com/chrislloyd876">chrislloyd876</a>.
     <a target="_blank" href="https://icons8.com/icon/59799/hand-cursor">Pointer</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
     </footer>
   </body>
